# bot

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
bot/: __main__.py  bot.py  commands.py  config.py  telegram_bot.py
bot/client/: client.py
bot/tools/: json_telegram.py  schemes.py
